--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,3 +1,4 @@
 database_address=tcp://10.66.161.2:11000
 chat_sender_address=tcp://10.66.161.2:10001
 chat_receiver_address=tcp://10.66.161.2:10000
+room_manager_address=tcp://10.66.161.2:16000
