--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,14 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
     jcenter()
+    maven { url 'http://10.66.161.2:60000/repository/maven-public/' }
 }
 
 
 dependencies {
     compile "org.zeromq:jeromq:latest.release"
     compile "com.fasterxml.jackson.core:jackson-databind:latest.release"
+    compile 'android-chat-com.chat.util:android-chat-utils:1.0-RELEASE'
 
     compile 'org.slf4j:jcl-over-slf4j:latest.release'
     compile 'ch.qos.logback:logback-classic:latest.release'
